# coffeejournal

./: .dockerignore  .gitignore  CLAUDE.md  clean_test_data.py  create_test_data.py  current_bugs.txt  current_wishlist.txt  cypress-setup-plan.md  fix_data_types.py  fix_existing_data.py  migrate_data.py  migration_v1_1_to_v1_2.py  pyproject.toml  schema_version.json  test_brew_sessions.py  test_usage_endpoints.py  verify_setup.py
.github/workflows/: docker-build.yml
docker/: .env.example  DOCKER_SETUP.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  init-db.py  nginx.conf  setup.sh  start.sh  stop.sh
migrations/: add_is_active_to_batches.py  add_is_default_to_lookups.py
src/coffeejournal/: __init__.py  lookups.py  main.py  wsgi.py
src/coffeejournal/api/: __init__.py  batches.py  products.py  utils.py
src/coffeejournal/frontend/: cypress.config.js  package-lock.json  package.json
test_data/: batches.json  bean_types.json  brew_methods.json  brew_sessions.json  countries.json  data_version.json  decaf_methods.json  filters.json  grinders.json  kettles.json  products.json  recipes.json  roasters.json  scales.json
tests/: conftest.py  test_api_endpoints.py  test_api_short_form.py  test_audit_timestamps.py  test_batch_active_flag.py  test_brew_session_lookups.py  test_brew_temperature_float.py  test_bug_fixes.py  test_default_lookup_items.py  test_grinder_stats.py  test_lookup_crud.py  test_lookup_usage.py  test_repositories.py  test_short_form_functionality.py  test_smart_defaults.py  test_test_data.py
(+76 files in other folders)
